tests/errors/sem.expected-constant.decl-init.or
main :: () -> void {
    X :: {6;};
    X;
};
